# hashiwokakero

./: CMakeLists.txt  TODO.txt  readme.txt
LaTeX/: Makefile  game.c  node.c  rapport.aux  rapport.out  rapport.tex  rapport.toc
include/: game.h  grid_update.h  init_game.h  user_interac.h
sdl2-demo/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile.bak  README.txt  cmake_install.cmake  main.c  main.c~  model  model.c  model.c~  model.h
src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.old  cmake_install.cmake  fichier_open.c  game.c  game.c.old  game.solved  grid_update.c  hashi_solve  hashi_solve.c  hashi_text  hashi_text.c  init_game.c  init_game.c.old  install_manifest.txt  node.c  solv.c  test_game1  test_game1.c  test_game2  test_game2.c  test_game3  test_game3.c  test_game4  test_game4.c  user_interac.c
